syntax = "proto3";

package ggezchain.mobile;

import "gogoproto/gogo.proto";
import "ggezchain/mobile/params.proto";
import "ggezchain/mobile/mobile_index.proto";
import "ggezchain/mobile/stored_trade.proto";

option go_package = "github.com/mousaibrah/ggezchain/x/mobile/types";

// GenesisState defines the mobile module's genesis state.
message GenesisState {
           Params      params          = 1 [(gogoproto.nullable) = false];
           MobileIndex mobileIndex     = 2 [(gogoproto.nullable) = false];
  repeated StoredTrade storedTradeList = 3 [(gogoproto.nullable) = false];
}

